--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
 
     <loader key="spinner-1"></loader>
+
     <ui-view></ui-view>
 
 
@@ -67,10 +68,15 @@
         <script src="scripts/controllers/login.js"></script>
 
 
+    <!--Services-->
+        <script src="scripts/services/contactServices.js"></script>
+        <script src="scripts/services/postServices.js"></script>
+        <script src="scripts/services/endPointDefinitionService.js"></script>
+
     <!--Directives-->
-        <script src="scripts/directives/autoFocus.js"></script>
-        <script src="scripts/directives/ngEnter.js"></script>
-        <script src="scripts/directives/loaderDirective.js"></script>
+    <script src="scripts/directives/autoFocus.js"></script>
+    <script src="scripts/directives/ngEnter.js"></script>
+    <script src="scripts/directives/loaderDirective.js"></script>
         <!-- endbuild -->
 </body>
 </html>
