--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/login.js"></script>
-        <script src="views/modal/admin.js"></script>
+        <!--<script src="views/modal/admin.js"></script>-->
 
 
     <!--Services-->
